# bevy-ecs-wasm

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: event.rs  lib.rs  reflect.rs
src/component/: mod.rs
src/entity/: map_entities.rs  mod.rs
src/query/: state.rs
src/schedule/: graph_utils.rs  mod.rs  run_criteria.rs  stage.rs  state.rs  system_descriptor.rs
src/storage/: table.rs
src/system/: commands.rs  exclusive_system.rs  into_system.rs  mod.rs  query.rs  system.rs  system_chaining.rs
src/world/: mod.rs
