[package]
name = "bevy_ecs_wasm"
version = "0.5.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
    "UnlimitedHugs <unlimitedhugs@protonmail.com>",
]
description = "Bevy Engine's entity component system"
homepage = "https://bevyengine.org"
repository = "https://github.com/UnlimitedHugs/bevy-ecs-wasm"
license = "MIT"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[features]
trace = []

[dependencies]
bevy_ecs_macros = { path = "macros" }
fixedbitset = "0.4"
thiserror = "1.0"
downcast-rs = "1.2"
serde = { version = "1", optional = true }
